@@ -1,33 +1,28 @@
 package com.example.apicrowdsensing.controllers;
 
 import com.example.apicrowdsensing.models.LocationRequest;
-import com.example.apicrowdsensing.models.Park;
-import com.example.apicrowdsensing.models.Visitas;
-import com.example.apicrowdsensing.repositories.ParkRepository;
-import com.example.apicrowdsensing.repositories.ViajeRepository;
-import com.example.apicrowdsensing.views.BaseResponse;
-import com.example.apicrowdsensing.views.ErrorResponse;
+import com.example.apicrowdsensing.models.PublicSpace;
+import com.example.apicrowdsensing.models.Visit;
+import com.example.apicrowdsensing.repositories.PublicSpaceRepository;
+import com.example.apicrowdsensing.repositories.VisitRepository;
+import com.example.apicrowdsensing.services.Utils;
+import com.example.apicrowdsensing.views.responses.BaseResponse;
+import com.example.apicrowdsensing.views.responses.ErrorResponse;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.github.tomakehurst.wiremock.WireMockServer;
+import com.github.tomakehurst.wiremock.client.WireMock;
 import com.jayway.jsonpath.JsonPath;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
 import org.springframework.mock.web.MockMultipartFile;
-import org.springframework.test.web.client.MockRestServiceServer;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.client.RestTemplate;
 
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -35,13 +30,10 @@ import java.util.List;
 import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
-
-import static org.springframework.test.web.client.match.MockRestRequestMatchers.*;
-import static org.springframework.test.web.client.response.MockRestResponseCreators.withServerError;
-import static org.springframework.test.web.client.response.MockRestResponseCreators.withSuccess;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 import static org.junit.jupiter.api.Assertions.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @SpringBootTest
 @AutoConfigureMockMvc
@@ -52,94 +44,68 @@ public class CrowdsensingControllerTest {
     private MockMvc mockMvc;
 
     @Autowired
-    private RestTemplate restTemplate;
+    private PublicSpaceRepository publicSpaceRepository;
 
     @Autowired
-    private ParkRepository parkRepository;
+    private VisitRepository visitRepository;
 
     @Autowired
-    private ViajeRepository viajeRepository;
+    private Utils utils;
 
-    static MockRestServiceServer mockServer;
-
-    @BeforeEach
-    public void setup() {}
-    @AfterEach
-    public void tearDown() {
-        parkRepository.deleteAll();
-    }
-
-    private static String asJsonString(final Object obj) {
-        try {
-            return new ObjectMapper().writeValueAsString(obj);
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
-    }
     @Test
-    public void testGetQuerySuccesful() throws Exception {
-//        mockServer.expect(requestTo("https://overpass-api.de/api/interpreter"))
-//                .andExpect(method(HttpMethod.POST))
-//                .andRespond(withSuccess());
+    public void testGetOverpassQuery() throws Exception {
+        WireMockServer wireMockServer = new WireMockServer(8089); // Puerto para mockear
+        wireMockServer.start();
+        WireMock.configureFor("localhost", 8089);
 
-        mockServer = MockRestServiceServer.createServer(restTemplate);
+        WireMock.stubFor(WireMock.post(WireMock.urlEqualTo("/api/interpreter"))
+                .willReturn(WireMock.aResponse()
+                        .withStatus(200)
+                        .withHeader("Content-Type", "application/json")
+                        .withBody("""
+                        {
+                            "elements": [
+                                {
+                                    "type": "node",
+                                    "id": 123456,
+                                    "lat": 50.123456,
+                                    "lon": 8.123456,
+                                    "tags": {
+                                        "name": "Test Park",
+                                        "leisure": "park"
+                                    }
+                                }
+                            ]
+                        }
+                    """)));
 
-        Path path = Paths.get("src", "main", "resources", "response.json");
-        String jsonResponse = new String(Files.readAllBytes(path));
-        mockServer.expect(requestTo("https://overpass-api.de/api/interpreter"))
-                .andExpect(method(HttpMethod.POST))
-                .andRespond(withSuccess(jsonResponse, MediaType.APPLICATION_JSON));
-
-        mockMvc.perform(get("/query/city")
-                        .param("city", "Ayacucho")
-                        .param("tag", "park")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-
-        List<Park> parks = parkRepository.findAll();
-        System.out.println(parkRepository.findAll());
-
-        assertThat(parks).isNotEmpty();
-        assertThat(parks).anyMatch(p -> p.getName().equals("Plaza"));
-    }
-    @Test
-    public void testGetQueryUnsuccesful() throws Exception {
-        mockServer.expect(requestTo("https://overpass-api.de/api/interpreter"))
-                .andExpect(method(HttpMethod.POST))
-                .andRespond(withServerError());
-
-        MvcResult result = mockMvc.perform(get("/query/city")
-                        .param("city", "UnknownCity")
-                        .param("tag", "park")
-                        .contentType(MediaType.APPLICATION_JSON))
+        MvcResult result = mockMvc.perform(get("/query/overpass")
+                        .param("city", "test")
+                        .param("tag", "test"))
                 .andExpect(status().isOk())
                 .andReturn();
 
         String jsonResponse = result.getResponse().getContentAsString();
-        String payload = JsonPath.read(jsonResponse, "$.payload");
-        String errorMessage = JsonPath.read(jsonResponse, "$.errorResponse");
-        BaseResponse baseResponse = new BaseResponse(payload, new ErrorResponse(errorMessage));
+        assertTrue(jsonResponse.contains("Overpass queried!"));
 
-        assertEquals(baseResponse.getPayload(), "City or limits not found");
-
+        wireMockServer.stop();
     }
     @Test
     public void testCreateLocationSuccess() throws Exception {
-        var park1 = new Park();
-        park1.setId(1L);
-        park1.setName("Test 1");
-        park1.setCity("City");
-        park1.setType("park");
-        park1.setCreated(true);
-        park1.setDeleted(false);
-        park1.setPoints(Arrays.asList("40.7128; -74.0060"));
-        parkRepository.save(park1);
+        var publicSpace = new PublicSpace();
+        publicSpace.setName("test");
+        publicSpace.setCity("city");
+        publicSpace.setType("park");
+        publicSpace.setCreated(true);
+        publicSpace.setDeleted(false);
+        publicSpace.setPoints(List.of("40.7128; -74.0060"));
+        publicSpaceRepository.save(publicSpace);
 
         LocationRequest locationRequest = new LocationRequest();
         locationRequest.setName("Test Location");
         locationRequest.setType("Test");
         List<List<String>> positions = new ArrayList<>();
-        List<String> coords = new ArrayList();
+        ArrayList<String> coords = new ArrayList<>();
         String lat = "40.7128";
         String lon = "-74.0060";
         coords.add(lat);
@@ -149,202 +115,188 @@ public class CrowdsensingControllerTest {
 
         MvcResult result = mockMvc.perform(post("/create/location")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(asJsonString(locationRequest)))
+                        .content(utils.asJsonString(locationRequest)))
                 .andExpect(status().isOk())
                 .andReturn();
 
         String jsonResponse = result.getResponse().getContentAsString();
         String payload = JsonPath.read(jsonResponse, "$.payload");
-        String errorResponse = JsonPath.read(jsonResponse, "$.errorResponse");
+        Exception errorResponse = JsonPath.read(jsonResponse, "$.errorResponse");
         BaseResponse baseResponse = new BaseResponse(payload, new ErrorResponse(errorResponse));
 
-        assertThat(baseResponse.getErrorResponse().getErrorMessage()).isNull();
+        assertThat(baseResponse.getErrorResponse().getException()).isNull();
         assertThat(baseResponse.getPayload()).isNotNull();
-        assertEquals(baseResponse.getPayload(), "New location created!");
-        assertThat(parkRepository.findByName("Test Location")).isNotNull();
+        assertEquals(baseResponse.getPayload(), "New location created");
+        assertThat(publicSpaceRepository.findByName("Test Location")).isNotNull();
     }
     @Test
     public void testCreateLocationException() throws Exception {
-        var park1 = new Park();
-        park1.setId(1L);
-        park1.setName("Test 1");
-        park1.setCity("City");
-        park1.setType("park");
-        park1.setCreated(true);
-        park1.setDeleted(false);
-        park1.setPoints(Arrays.asList("40.7128; -74.0060"));
-        parkRepository.save(park1);
+        var publicSpace = new PublicSpace();
+        publicSpace.setName("test");
+        publicSpace.setCity("city");
+        publicSpace.setType("park");
+        publicSpace.setCreated(true);
+        publicSpace.setDeleted(false);
+        publicSpace.setPoints(List.of("40.7128; -74.0060"));
+        publicSpaceRepository.save(publicSpace);
 
         LocationRequest locationRequest = new LocationRequest();
         locationRequest.setName("Test Location");
         locationRequest.setType("Test");
+        locationRequest.setCity("City");
         List<List<String>> positions = new ArrayList<>();
-        List<String> coords = new ArrayList();
+        List<String> coords = new ArrayList<>();
         positions.add(coords);
         locationRequest.setPositions(positions);
 
         MvcResult result = mockMvc.perform(post("/create/location")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(asJsonString(locationRequest)))
-                .andExpect(status().isOk())
+                        .content(utils.asJsonString(locationRequest)))
+                .andExpect(status().isBadRequest())
                 .andReturn();
 
-        String jsonResponse = result.getResponse().getContentAsString();
-        String payload = JsonPath.read(jsonResponse, "$.payload");
-        String errorResponse = JsonPath.read(jsonResponse, "$.errorResponse.errorMessage");
-        BaseResponse baseResponse = new BaseResponse(payload, new ErrorResponse(errorResponse));
-
-        assertThat(baseResponse.getPayload()).isNull();
-        assertThat(baseResponse.getErrorResponse()).isNotNull();
-        assertEquals(baseResponse.getErrorResponse().getErrorMessage(), "The list of points is empty");
-        assertThat(parkRepository.findByName("Test Location")).isNull();
+        String response = result.getResponse().getContentAsString();
+        String error = JsonPath.read(response, "$.errorResponse.exception.message");
+        assertEquals(error, "List of points is empty");
+        assertThat(publicSpaceRepository.findByName("Test Location")).isNull();
     }
     @Test
-    public void testGetParksSuccess() throws Exception {
-        var park1 = new Park();
-        park1.setId(1L);
-        park1.setName("Test 1");
-        park1.setCity("City");
-        park1.setType("park");
-        park1.setCreated(true);
-        park1.setDeleted(false);
-        park1.setPoints(Arrays.asList("40.7128; -74.0060"));
-        parkRepository.save(park1);
+    public void testGetPublicSpacesSuccess() throws Exception {
+        var publicSpace = new PublicSpace();
+        publicSpace.setName("test");
+        publicSpace.setCity("city");
+        publicSpace.setType("park");
+        publicSpace.setCreated(true);
+        publicSpace.setDeleted(false);
+        publicSpace.setPoints(List.of("40.7128; -74.0060"));
+        publicSpaceRepository.save(publicSpace);
 
 
-        MvcResult result = mockMvc.perform(get("/parks")
+        MvcResult result = mockMvc.perform(get("/publicspaces")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andReturn();
 
         String jsonResponse = result.getResponse().getContentAsString();
         List<Map<String, Object>> payload = JsonPath.read(jsonResponse, "$.payload");
-        BaseResponse baseResponse = new BaseResponse(jsonResponse, null);
+        Exception errorResponse = JsonPath.read(jsonResponse, "$.errorResponse");
+        BaseResponse baseResponse = new BaseResponse(payload, new ErrorResponse(errorResponse));
 
-        assertThat(baseResponse.getErrorResponse()).isNull();
+        assertThat(baseResponse.getErrorResponse().getException()).isNull();
         assertThat(payload).isNotEmpty();
     }
     @Test
-    public void testGetParksEmpty() throws Exception {
-        MvcResult result = mockMvc.perform(get("/parks")
+    public void testGetPublicSpacesEmpty() throws Exception {
+        MvcResult result = mockMvc.perform(get("/publicspaces")
                         .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
+                .andExpect(status().isBadRequest())
                 .andReturn();
 
         String jsonResponse = result.getResponse().getContentAsString();
-        List<Map<String, Object>> payload = JsonPath.read(jsonResponse, "$.payload");
-        String errorMessage = JsonPath.read(jsonResponse, "$.errorResponse");
-        BaseResponse baseResponse = new BaseResponse(payload, new ErrorResponse(errorMessage));
+        String error = JsonPath.read(jsonResponse, "$.errorResponse.exception.message");
 
-        assertThat(baseResponse.getErrorResponse().getErrorMessage()).isNull();
-        assertThat(payload).isEmpty();
+        assertEquals(error, "No public spaces available");
     }
     @Test
     public void testGetVisitsSuccess() throws Exception {
-        var visit = new Visitas();
+        var visit = new Visit();
         visit.setId(1);
         visit.setUser_id(154);
         visit.setCenter("p1, p2");
         visit.setStartTime(1617640000000L);
         visit.setEnd_time(1617640000000L);
-        viajeRepository.save(visit);
+        visitRepository.save(visit);
 
-        MvcResult result = mockMvc.perform(get("/visitas")
-                .contentType(MediaType.APPLICATION_JSON))
+        MvcResult result = mockMvc.perform(get("/visits")
+                        .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andReturn();
 
         String jsonResponse = result.getResponse().getContentAsString();
         List<Map<String, Object>> payload = JsonPath.read(jsonResponse, "$.payload");
-        BaseResponse baseResponse = new BaseResponse(jsonResponse, null);
+        Exception errorResponse = JsonPath.read(jsonResponse, "$.errorResponse");
+        BaseResponse baseResponse = new BaseResponse(jsonResponse, new ErrorResponse(errorResponse));
 
-        assertThat(baseResponse.getErrorResponse()).isNull();
+        assertThat(baseResponse.getErrorResponse().getException()).isNull();
         assertThat(payload).isNotNull();
     }
     @Test
     public void testGetVisitsEmpty() throws Exception {
-        MvcResult result = mockMvc.perform(get("/visitas")
+        MvcResult result = mockMvc.perform(get("/visits")
                         .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
+                .andExpect(status().isBadRequest())
                 .andReturn();
 
         String jsonResponse = result.getResponse().getContentAsString();
-        List<Map<String, Object>> payload = JsonPath.read(jsonResponse, "$.payload");
-        String errorMessage = JsonPath.read(jsonResponse, "$.errorResponse");
-        BaseResponse baseResponse = new BaseResponse(payload, new ErrorResponse(errorMessage));
+        String error = JsonPath.read(jsonResponse, "$.errorResponse.exception.message");
 
-        assertThat(baseResponse.getErrorResponse().getErrorMessage()).isNull();
-        assertThat(baseResponse.getPayloadAsString(payload)).isNull();
+        assertEquals(error, "No visits available");
     }
     @Test
-    public void testDeleteParkSuccess() throws Exception {
-        var park1 = new Park();
-        park1.setId(1L);
-        park1.setName("Test 1");
-        park1.setCity("City");
-        park1.setType("park");
-        park1.setCreated(true);
-        park1.setDeleted(false);
-        park1.setPoints(Arrays.asList("40.7128; -74.0060"));
-        parkRepository.save(park1);
+    public void testSoftDeletePublicSpaceSuccess() throws Exception {
+        var ps = new PublicSpace();
+        ps.setId(1L);
+        ps.setName("test");
+        ps.setCity("city");
+        ps.setType("park");
+        ps.setCreated(true);
+        ps.setDeleted(false);
+        ps.setPoints(List.of("40.7128; -74.0060"));
+        publicSpaceRepository.save(ps);
 
-        MvcResult result = mockMvc.perform(delete("/delete/park")
-                        .param("name", "Test 1")
+        MvcResult result = mockMvc.perform(put("/delete/publicspace/{id}", 11)
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andReturn();
+
 
         String jsonResponse = result.getResponse().getContentAsString();
         String payload = JsonPath.read(jsonResponse, "$.payload");
-        String errorMessage = JsonPath.read(jsonResponse, "$.errorResponse");
-        BaseResponse baseResponse = new BaseResponse(payload, new ErrorResponse(errorMessage));
 
-        assertTrue(parkRepository.findByName("Test 1").isDeleted());
-        assertThat(baseResponse.getErrorResponse().getErrorMessage()).isNull();
-        assertThat(baseResponse.getPayload()).isEqualTo("Public space deleted successfully");
+        assertEquals(payload , "Public space deleted successfully");
     }
     @Test
-    public void testDeleteParkException() throws Exception {
-        var park1 = new Park();
-        park1.setId(1L);
-        park1.setName("Test 1");
-        park1.setCity("City");
-        park1.setType("park");
-        park1.setCreated(true);
-        park1.setDeleted(false);
-        park1.setPoints(Arrays.asList("40.7128; -74.0060"));
-        parkRepository.save(park1);
+    public void testSoftDeletePublicSpaceException() throws Exception {
+        publicSpaceRepository.deleteAll();
+        var ps = new PublicSpace();
+//        ps.setId(1L);
+        ps.setName("Test 1");
+        ps.setCity("City");
+        ps.setType("park");
+        ps.setCreated(true);
+        ps.setDeleted(false);
+        ps.setPoints(List.of("40.7128; -74.0060"));
+        publicSpaceRepository.save(ps);
 
-        MvcResult result = mockMvc.perform(delete("/delete/park")
-                        .param("name", "NonExistentPark")
+        mockMvc.perform(put("/delete/publicspace/{id}", 199L)
                         .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
+                .andExpect(status().isBadRequest())
                 .andReturn();
 
-        String jsonResponse = result.getResponse().getContentAsString();
-        String payload = JsonPath.read(jsonResponse, "$.payload");
-        String errorMessage = JsonPath.read(jsonResponse, "$.errorResponse.errorMessage");
-        BaseResponse baseResponse = new BaseResponse(payload, new ErrorResponse(jsonResponse));
-
-        assertThat(baseResponse.getErrorResponse().getErrorMessage()).isNotNull();
-        assertFalse(parkRepository.findByName("Test 1").isDeleted());
-        assertThat(errorMessage).isEqualTo("Park not found");
-        assertThat(payload).isNull();
+        assertFalse(publicSpaceRepository.findByName("Test 1").isDeleted());
     }
     @Test
     public void testUpdateParkNameSuccess() throws Exception {
-        var park1 = new Park();
-        park1.setId(1L);
-        park1.setName("Test 1");
-        park1.setCity("City");
-        park1.setType("park");
-        park1.setCreated(true);
-        park1.setDeleted(false);
-        park1.setPoints(Arrays.asList("40.7128; -74.0060"));
-        parkRepository.save(park1);
+        var ps = new PublicSpace();
+        ps.setId(1L);
+        ps.setName("test");
+        ps.setCity("city");
+        ps.setType("park");
+        ps.setCreated(true);
+        ps.setDeleted(false);
+        ps.setPoints(List.of("40.7128; -74.0060"));
+        var ps2 = new PublicSpace();
+        ps2.setId(2L);
+        ps2.setName("test");
+        ps2.setCity("city");
+        ps2.setType("park");
+        ps2.setCreated(true);
+        ps2.setDeleted(false);
+        ps2.setPoints(List.of("40.7128; -74.0060"));
+        publicSpaceRepository.save(ps);
+        publicSpaceRepository.save(ps2);
 
-        MvcResult result = mockMvc.perform(put("/update/park")
-                        .param("name", "Test 1")
+        MvcResult result = mockMvc.perform(put("/publicspaces/name/{id}", 4)
                         .param("newName", "New Name")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
@@ -352,47 +304,45 @@ public class CrowdsensingControllerTest {
 
         String jsonResponse = result.getResponse().getContentAsString();
         String payload = JsonPath.read(jsonResponse, "$.payload");
-        String errorMessage = JsonPath.read(jsonResponse, "$.errorResponse");
+        Exception errorMessage = JsonPath.read(jsonResponse, "$.errorResponse");
         BaseResponse baseResponse = new BaseResponse(payload, new ErrorResponse(errorMessage));
 
         assertThat(baseResponse.getErrorResponse()).isNotNull();
-        assertThat(baseResponse.getPayloadAsString(payload)).isEqualTo("Public space's name updated!");
+        assertThat(baseResponse.getPayloadAsString(payload)).isEqualTo("Public space's name updated");
 
-        Park updatedPark = parkRepository.findByName("New Name");
-        assertThat(updatedPark).isNotNull();
-        assertThat(updatedPark.getName()).isEqualTo("New Name");
+        PublicSpace updatedPublicSpace = publicSpaceRepository.findById(4L);
+        assertThat(updatedPublicSpace).isNotNull();
+        assertThat(updatedPublicSpace.getName()).isEqualTo("New Name");
     }
     @Test
     public void testUpdateParkNameException() throws Exception {
-        var park1 = new Park();
-        park1.setId(1L);
-        park1.setName("Test 1");
-        park1.setCity("City");
-        park1.setType("park");
-        park1.setCreated(true);
-        park1.setDeleted(false);
-        park1.setPoints(Arrays.asList("40.7128; -74.0060"));
-        parkRepository.save(park1);
+        var ps = new PublicSpace();
+        ps.setId(1L);
+        ps.setName("Test 1");
+        ps.setCity("City");
+        ps.setType("park");
+        ps.setCreated(true);
+        ps.setDeleted(false);
+        ps.setPoints(List.of("40.7128; -74.0060"));
+        publicSpaceRepository.save(ps);
 
-        MvcResult result = mockMvc.perform(put("/update/park")
-                        .param("name", "NonExistentPark")
+        MvcResult result = mockMvc.perform(put("/publicspaces/name/{id}", 100L)
                         .param("newName", "NewName")
                         .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
+                .andExpect(status().isBadRequest())
                 .andReturn();
 
         String jsonResponse = result.getResponse().getContentAsString();
-        String payload = JsonPath.read(jsonResponse, "$.payload");
-        String errorMessage = JsonPath.read(jsonResponse, "$.errorResponse.errorMessage");
-        BaseResponse baseResponse = new BaseResponse(payload, new ErrorResponse(errorMessage));
+        String error = JsonPath.read(jsonResponse, "$.errorResponse.exception.message");
 
-        // Verifica que la respuesta contenga el mensaje de error esperado
-        assertThat(baseResponse.getErrorResponse().getErrorMessage()).isEqualTo("Park not found");
+        assertEquals(error, "PublicSpace not found");
     }
     @Test
     public void testUploadCsvSuccess() throws Exception {
-        String csvContent = "id,user_id,coordinate,start_time,end_time\n"
-                + "1,100,\"(40.7128,-74.0060)\",1609459200000,1609462800000\n";
+        String csvContent = """
+                id,user_id,coordinate,start_time,end_time
+                1,100,"(40.7128,-74.0060)",1609459200000,1609462800000
+                """;
         MockMultipartFile file = new MockMultipartFile(
                 "file", "test.csv", "text/csv", csvContent.getBytes());
 
@@ -404,17 +354,17 @@ public class CrowdsensingControllerTest {
 
         String jsonResponse = result.getResponse().getContentAsString();
         String payload = JsonPath.read(jsonResponse, "$.payload");
-        String errorResponse = JsonPath.read(jsonResponse, "$.errorResponse");
+        Exception errorResponse = JsonPath.read(jsonResponse, "$.errorResponse");
         BaseResponse baseResponse = new BaseResponse(payload, new ErrorResponse(errorResponse));
 
-        assertThat(baseResponse.getErrorResponse().getErrorMessage()).isNull();
-        assertThat(baseResponse.getPayload()).isEqualTo("Archivo procesado y datos guardados en la base de datos.");
+        assertThat(baseResponse.getErrorResponse().getException()).isNull();
+        assertThat(baseResponse.getPayload()).isEqualTo("File was uploaded to the database");
 
-        List<Visitas> visitasList = viajeRepository.findAll();
-        assertThat(visitasList).hasSize(1);
-        assertThat(visitasList.get(0).getId()).isEqualTo(1);
-        assertThat(visitasList.get(0).getUser_id()).isEqualTo(100);
-        assertThat(visitasList.get(0).getCenter()).isEqualTo("(40.7128,-74.0060)");
+        List<Visit> visitList = visitRepository.findAll();
+        assertThat(visitList).hasSize(1);
+        assertThat(visitList.get(0).getId()).isEqualTo(1);
+        assertThat(visitList.get(0).getUser_id()).isEqualTo(100);
+        assertThat(visitList.get(0).getCenter()).isEqualTo("(40.7128,-74.0060)");
     }
     @Test
     public void testUploadCsvEmptyFile() throws Exception {
@@ -424,55 +374,47 @@ public class CrowdsensingControllerTest {
         MvcResult result = mockMvc.perform(multipart("/upload")
                         .file(file)
                         .contentType(MediaType.MULTIPART_FORM_DATA))
-                .andExpect(status().isOk())
+                .andExpect(status().isBadRequest())
                 .andReturn();
 
         String jsonResponse = result.getResponse().getContentAsString();
-        String payload = JsonPath.read(jsonResponse, "$.payload");
-        String errorResponse = JsonPath.read(jsonResponse, "$.errorResponse");
-        BaseResponse baseResponse = new BaseResponse(payload, new ErrorResponse(errorResponse));
+        String error = JsonPath.read(jsonResponse, "$.errorResponse.exception.message");
 
-        assertThat(baseResponse.getErrorResponse().getErrorMessage()).isNull();
-        assertThat(baseResponse.getPayload()).isEqualTo("El archivo esta vacio");
+        assertEquals(error, "File is empty");
 
-        List<Visitas> visitasList = viajeRepository.findAll();
-        assertThat(visitasList).isEmpty();
+        List<Visit> visitList = visitRepository.findAll();
+        assertThat(visitList).isEmpty();
     }
     @Test
     public void testUploadCsvMalformed() throws Exception {
-        String csvContent = "id,user_id,coordinate,start_time,end_time\n"
-                + "1,100,\"(40.7128,-74.0060)\"\n"; // Falta start_time y end_time
+        String csvContent = """
+                id,user_id,coordinate,start_time,end_time
+                1,100,"(40.7128,-74.0060)"
+                """; // Falta start_time y end_time
 
         MockMultipartFile file = new MockMultipartFile(
                 "file", "malformed.csv", "text/csv", csvContent.getBytes());
 
-        MvcResult result = mockMvc.perform(multipart("/upload")
+
+        mockMvc.perform(multipart("/upload")
                         .file(file)
                         .contentType(MediaType.MULTIPART_FORM_DATA))
-                .andExpect(status().isOk())
-                .andReturn();
+                .andExpect(status().isBadRequest())
+                .andExpect(jsonPath("$.errorResponse.exception.message")
+                        .value("Malformed CSV: Insufficient columns on line 1"));
 
-        String jsonResponse = result.getResponse().getContentAsString();
-        String payload = JsonPath.read(jsonResponse, "$.payload");
-        String errorResponse = JsonPath.read(jsonResponse, "$.errorResponse.errorMessage");
-        BaseResponse baseResponse = new BaseResponse(payload, new ErrorResponse(errorResponse));
-
-        assertThat(baseResponse.getPayload()).isNull();
-        assertThat(baseResponse.getErrorResponse().getErrorMessage()).contains("Error: Index 4 out of bounds for length 4");
-
-        List<Visitas> visitasList = viajeRepository.findAll();
-        assertThat(visitasList).isEmpty();
+        List<Visit> visitList = visitRepository.findAll();
+        assertThat(visitList).isEmpty();
     }
     @Test
     public void testGetMarkersSuccess() throws Exception {
-        var park1 = new Park();
-        park1.setId(1L);
-        park1.setName("Test 1");
-        park1.setCity("City");
-        park1.setType("park");
-        park1.setCreated(true);
-        park1.setDeleted(false);
-        park1.setPoints(Arrays.asList(
+        var ps = new PublicSpace();
+        ps.setName("test");
+        ps.setCity("city");
+        ps.setType("park");
+        ps.setCreated(true);
+        ps.setDeleted(false);
+        ps.setPoints(Arrays.asList(
                 "-37.3266645; -59.1290909",
                 "-37.3261356; -59.127699",
                 "-37.3262184; -59.1276492",
@@ -481,44 +423,16 @@ public class CrowdsensingControllerTest {
                 "-37.3277621; -59.1284428",
                 "-37.3266645; -59.1290909"
         ));
-        parkRepository.save(park1);
+        publicSpaceRepository.save(ps);
 
-        Visitas visita1 = new Visitas();
-        visita1.setId(1);
-        visita1.setUser_id(100);
-        visita1.setCenter("(-37.326952, -59.128071)");
-        visita1.setStartTime(1577847600000L); // 01-01-2021
-        visita1.setEnd_time(1640919600000L); // 02-01-2021
-        viajeRepository.save(visita1);
+        Visit visit = new Visit();
+        visit.setId(1);
+        visit.setUser_id(100);
+        visit.setCenter("(-37.326952, -59.128071)");
+        visit.setStartTime(1577847600000L); // 01-01-2021
+        visit.setEnd_time(1640919600000L); // 02-01-2021
+        visitRepository.save(visit);
 
-//        // Mockear la lectura del archivo JSON
-//        String mockJsonContent = """
-//        {
-//          "version" : 0.6,
-//          "generator" : "Overpass API 0.7.62.1 084b4234",
-//          "osm3s" : {
-//            "timestamp_osm_base" : "2024-09-02T20:01:44Z",
-//            "timestamp_areas_base" : "2024-09-02T14:00:16Z",
-//            "copyright" : "The data included in this document is from www.openstreetmap.org. The data is made available under ODbL."
-//          },
-//          "elements" : [ {
-//            "type" : "node",
-//            "id" : 10805479623,
-//            "lat" : -37.151152,
-//            "lon" : -58.4748928,
-//            "tags" : {
-//              "leisure" : "park",
-//              "name" : "Plaza Eva Perón"
-//            }
-//          }]
-//        }
-//        """;
-//
-//        Mockito.when(crowdsensingService.getMarkers(
-//                any(LocalDate.class),
-//                any(LocalDate.class),
-//                Mockito.anyString()
-//        )).thenReturn(ResponseEntity.ok(mockJsonContent));
 
         LocalDate initialDate = LocalDate.of(2020, 1, 1);
         LocalDate finalDate = LocalDate.of(2021, 12, 31);
@@ -528,25 +442,33 @@ public class CrowdsensingControllerTest {
                         .param("initialDate", String.valueOf(initialDate))
                         .param("finalDate", String.valueOf(finalDate))
                         .param("tag", tag)
+                        .param("city", "city")
                         .contentType(MediaType.APPLICATION_JSON))
-                        .andExpect(status().isOk())
-                        .andReturn();
+                .andExpect(status().isOk())
+                .andReturn();
 
         String jsonResponse = result.getResponse().getContentAsString();
-        System.out.println(jsonResponse);
+        ObjectMapper objectMapper = new ObjectMapper();
+        JsonNode rootNode = objectMapper.readTree(jsonResponse);
+
+        for (JsonNode marker : rootNode) {
+            JsonNode trafficArray = marker.get("traffic");
+            for (JsonNode traffic : trafficArray) {
+                int trafficValue = traffic.get("traffic").asInt();
+                assertEquals(trafficValue, 1);
+            }
+        }
         assertTrue(jsonResponse.contains("geocode"));
     }
     @Test
     public void testGetMarkersEmpty() throws Exception {
-
-        var park1 = new Park();
-        park1.setId(1L);
-        park1.setName("Test 1");
-        park1.setCity("City");
-        park1.setType("park");
-        park1.setCreated(true);
-        park1.setDeleted(false);
-        park1.setPoints(Arrays.asList(
+        var ps = new PublicSpace();
+        ps.setName("test");
+        ps.setCity("city");
+        ps.setType("park");
+        ps.setCreated(true);
+        ps.setDeleted(false);
+        ps.setPoints(Arrays.asList(
                 "-37.3266645; -59.1290909",
                 "-37.3261356; -59.127699",
                 "-37.3262184; -59.1276492",
@@ -555,15 +477,15 @@ public class CrowdsensingControllerTest {
                 "-37.3277621; -59.1284428",
                 "-37.3266645; -59.1290909"
         ));
-        parkRepository.save(park1);
+        publicSpaceRepository.save(ps);
 
-        Visitas visita1 = new Visitas();
-        visita1.setId(1);
-        visita1.setUser_id(100);
-        visita1.setCenter("(-37.326952, -59.128071)");
-        visita1.setStartTime(1577847600000L); // 01-01-2021
-        visita1.setEnd_time(1640919600000L); // 02-01-2021
-        viajeRepository.save(visita1);
+        Visit visit = new Visit();
+        visit.setId(1);
+        visit.setUser_id(100);
+        visit.setCenter("(-37.326952, -59.128071)");
+        visit.setStartTime(1577847600000L); // 01-01-2021
+        visit.setEnd_time(1640919600000L); // 02-01-2021
+        visitRepository.save(visit);
 
 
         LocalDate initialDate = LocalDate.of(2020, 1, 1);
@@ -574,12 +496,12 @@ public class CrowdsensingControllerTest {
                         .param("initialDate", String.valueOf(initialDate))
                         .param("finalDate", String.valueOf(finalDate))
                         .param("tag", tag)
+                        .param("city", "city")
                         .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
+                .andExpect(status().isBadRequest())
                 .andReturn();
 
-        String jsonResponse = result.getResponse().getContentAsString();
-        System.out.println(jsonResponse);
-        assertFalse(jsonResponse.contains("geocode"));
+        String response = result.getResponse().getContentAsString();
+        assertEquals(response, "No public spaces with that specification");
     }
 }
